--- a/R6SRCS/R6SRCS.vcxproj.filters
+++ b/R6SRCS/R6SRCS.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Sounds.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MouseClick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MouseMovement.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MouseClick.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
